Added some custom settings for controlling the appearance.
- show/hide the social links in the footer (usefull for disabling RSS)
- show/hide the "more" button in the main navbar
- show/hide the social share options on posts
- added the ability to add a custom copyright text

--- a/package.json
+++ b/package.json
@@ -25,6 +25,24 @@
       "xl": {
         "width": 2000
       }
+    },
+    "custom": {
+      "show_footer_links": {
+        "type": "boolean",
+        "default": true
+      },
+      "copyright_text_override": {
+        "type": "text"
+      },
+      "show_more_button_in_nav": {
+        "type": "boolean",
+        "default": true
+      },
+      
+      "show_social_links_in_posts": {
+        "type": "boolean",
+        "default": true
+      }
     }
   },
   "demo": "https://liebling.eduardogomez.io",
